// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Snapshots No props 1`] = `
<div
  className="sc-AykKC bIbiJr"
>
  <div
    className="sc-AykKD croRbF"
    spacing="tiny"
  >
    <p>
      Body
    </p>
    <p>
      Body
    </p>
  </div>
</div>
`;

exports[`Alert Snapshots Spacing 1`] = `
<div
  className="sc-AykKC bIbiJr"
>
  <div
    className="sc-AykKD kdSPhR"
    spacing="huge"
  >
    <p>
      Body
    </p>
    <p>
      Body
    </p>
  </div>
</div>
`;

exports[`Alert Snapshots invalid spacing 1`] = `
<div
  className="sc-AykKC bIbiJr"
>
  <div
    className="sc-AykKD fruWvN"
    spacing={10}
  />
</div>
`;

exports[`Alert Snapshots no children 1`] = `
<div
  className="sc-AykKC bIbiJr"
>
  <div
    className="sc-AykKD croRbF"
    spacing="tiny"
  />
</div>
`;
